plugins {
    id 'fabric-loom' version '0.9.9'
}

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

group = project.mod_group
archivesBaseName = project.mod_id
version = project.mod_version

println("Building on Java: ${System.getProperty('java.version')}, JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}) Arch: ${System.getProperty('os.arch')}")
println("Minecraft ${project.minecraft_version}, Fabric ${project.fabric_version}")

repositories {
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.bai.lol" }
    maven { url = "https://server.bbkr.space/artifactory/libs-release" }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

    compileOnly 'org.apache.commons:commons-lang3:3.8.1'
    compileOnly 'org.apache.logging.log4j:log4j-api:2.14.1'
    compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
    compileOnly 'com.google.code.gson:gson:2.8.0'

    // Fabric
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // LibGui
    modImplementation include("io.github.cottonmc:LibGui:4.2.2+1.17.1")

    // Cloth Config
    modApi("me.shedaniel.cloth:cloth-config-fabric:5.0.16") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    // WTHIT (WAILA)
    modCompileOnly "mcp.mobius.waila:wthit-api:fabric-3.9.0"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "mod_id": project.mod_id,
                "mod_version": project.mod_version,
                "mod_name": project.mod_name,
                "mod_description": project.mod_description
    }
}

remapJar {
    archiveClassifier = "fabric${project.minecraft_version}"

    from rootProject.file("LICENSE.md")
}

tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    it.options.encoding = "UTF-8"

    // Minecraft 1.17 (21w19a) upwards uses Java 16.
    it.options.release = 16
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}
